@@ -341,7 +341,15 @@ class Sys {
   }
   
   static method symlink : int ($oldpath : string, $newpath : string) {
-    return Sys::IO->symlinkp($oldpath, $newpath);
+    my $status = 0;
+    if (Sys->is_windows) {
+      $status = Sys::IO::Windows->symlink($oldpath, $newpath);
+    }
+    else {
+      $status = Sys::IO->symlink($oldpath, $newpath);
+    }
+    
+    return $status == 0;
   }
   
   static method opendir : Sys::IO::DirStream ($dir : string) {
