@@ -326,14 +326,6 @@ symlink() creates a symbolic link named newpath which contains the string oldpat
 
 See the L<symlink|https://linux.die.net/man/2/symlink> function in Linux.
 
-=head2 symlinkp
-
-  static method symlinkp : int ($oldpath : string, $newpath : string);
-
-If the OS is C<Windows>, it calls the L<symlink|SPVM::Sys::IO::Windows/"symlink"> in the L<Sys::IO::Windows|SPVM::Sys::IO::Windows>.
-
-Otherwise calls the L</"symlink"> method in this class.
-
 =head2 readlink
 
   static method readlink : int ($path : string, $buf : mutable string, $bufsiz : int);
