@@ -12,6 +12,7 @@
     * Removed the readlink method in the Sys class and the readlinkp method in the Sys::IO class because I don't know the Windows/Unix portable way to allocate memory yet.
     * Removed the unlinkp method in the SPVM::Sys::IO class. This logic is moved to the unlink method in the Sys class and fixed the return value.
     * Removed the renamep method in the SPVM::Sys::IO class. This logic is moved to the rename method in the Sys class.
+    * Removed the symlinkp method in the SPVM::Sys::IO class. This logic is moved to the symlink method in the Sys class.
   [New Features]
     * Added the Sys::IO::Windows class.
     * Added the symlinkp method in the Sys::IO: class.
